fetching backend for visitor counter

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     Contact me
                 </div>
             </a>
+            <div id="visitors">Visitors: ...</div>
         </div>
         <script src="js/script.js"></script> <!-- This will be used later in the series -->
     </body>
